TrialoftheTitansPackage/main/default/objects/Project__c/fields/Roles_Responsibilities__c.field-meta.xml
<CustomField>
    <fullName>Roles_Responsibilities__c</fullName>
    <label>Roles and Responsibilities</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>