TrialoftheTitansPackage/main/default/objects/Project__c/fields/Technologies__c.field-meta.xml
<CustomField>
    <fullName>Technologies__c</fullName>
    <label>Technologies</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>